--- a/work/ソフトウェア開発現場の失敗集めてみた_202507.md
+++ b/work/ソフトウェア開発現場の失敗集めてみた_202507.md
@@ -25,3 +25,7 @@
   - ドメイン知識
   - 用語集はドキュメント作成にも役立つ
   - チーム全員のドメイン知識底上げにもなる
+
+テストせずにスペックだけでライブラリなどの導入を決め、後々不具合が改修できなくなった
+　回避策:できるだけ枯れた技術を使う
+　回避策2:ソースコードが入手できるものを選ぶ(最悪なんとかする)
