--- a/work/ソフトウェア開発現場の失敗集めてみた_202507.md
+++ b/work/ソフトウェア開発現場の失敗集めてみた_202507.md
@@ -29,3 +29,28 @@
 テストせずにスペックだけでライブラリなどの導入を決め、後々不具合が改修できなくなった
 　回避策:できるだけ枯れた技術を使う
 　回避策2:ソースコードが入手できるものを選ぶ(最悪なんとかする)
+
+外注は難しい
+　外注委託失敗で遭遇率の高い「仕様は理解されていない」という失敗
+ 外注委託先とのコミュニケーションの最も核となる部分が仕様書
+ 　　ただしソフトウェアの仕様をすべて仕様書にすることは現実的に不可能
+  仕様書に書いていない当たり前動作は当たり前じゃない
+  仕様は正確に伝わっていない
+  　委託先側も不明点を素直に聞くことが大事
+   丁寧なコミュニケーションでしか解決できないことがたくさんある
+
+ゴールが曖昧なまま委託を開始しない
+受入検査仕様書で成果物のゴールを決める
+
+
+業界用語ですよね
+　とある業界で長年過ごしていると、自分の使っている言語が一般用語なのか専門用語なのか、仲間内でしか通じない言い回しなのかわからなくなる
+　新しいメンバーが入ってくる場合など、いろんなケースで用語が謎用語化する
+
+ドメイン知識
+　業界でしか利用されない特殊な知識をドメイン知識という
+ 業界で仕事が長くなると、ドメイン知識に頼った表現をしてしまう
+　 楽だから
+
+
+ 
