--- a/work/GitLabに学ぶリモート組織のつくりかた_202507.md
+++ b/work/GitLabに学ぶリモート組織のつくりかた_202507.md
@@ -84,4 +84,56 @@
 
 <!-- 5,6,7,8章 -->
 
+- バリューマッチが注目されている
+  - バリューを体現した結果、構成されていくパターンをカルチャー
+  - 市場に適応した明確なパターンをバリュー
+
+- コラボレーションに関する研究
+  - ソーシャル・ファシリテーション
+    - 他人に見られているときシンプルな作業の効率は上がるが、複雑な作業の効率が下がる
+  - リンゲルマン効果
+    - 集団で作業する際、一人当たりの生産性が人数の増加に応じて低下する
+  - 心理的安全性
+    - パフォーマンスが高いチームは心理的安全性が高い
+
+- 具体的な行動
+  - 思いやり
+    - 相手が理解できるよう接する
+  - ネガティブフィードバックは1on1で
+  - 問題は起きてすぐ対応
+    - 報告も
+  - **感謝を示す**(目に見える場所で)
+  - 主張を通すために他人の地位を利用しない
+  - 前向きな意図を想定
+    - 「根本的な貴族の誤り」
+      - 人間は自分の失敗は状況や環境に影響があったと感じるが、他人の失敗は当人に原因があったと感じてしまう
+      - この偏見に対して、相手が常に前向きな意図を持っていると想定することが重要
+  - 誠実に対応できなかったことは謝る
+    - 謝れることは強さである
+  - 誰も失敗させない
+    - チーム全体で勝利する
+    - 苦しんでいる人がいたら手を差し伸べる
+  - 人格ではなく仕事に対して提案する
+  - 成長のマインドセット
+    - 自分の能力が固定と感じている人はミスから目を逸らす
+    - 自分の能力が努力によって成長させられると感じている人はミスから学ぶ
+      - 後者でありたい~~
+  - 不確実性を受け入れる
+    - 受け入れて前進しながら問題を取り除く
+  - すべてドキュメント化する
+    - 記憶力がいくらよくても書き記したものにはかなわないという中国のことわざがあるらしい
+  - 他人の時間を尊重する
+  - 口頭での質問には結論から話す
+  - 不快な考えや価値観を受け入れる(多様性の観点)
+  - 小さな攻撃性に気を付ける
+    - 女性なのに数字に強いね、とかとか
+    - 一人の人間として向き合う必要がある
+  - 仕事は自分を表現する素晴らしい方法
+    - ユニークな出来事を楽しむ
+  - ニューロダイバーシティ
+    - 脳の多様性
+    - 自閉症、ADHD、双極性障害、感受性の違いなどは脳の多様性が影響している
+  - 自分→家族→友人など→仕事
+    - 人間関係は人生の根底をなすもの
+
 ### 業務ルール
